scripts/nullaway/original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8.txt
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Field.java:37: error: [NullAway] @NonNull static field sInstance not initialized
    private static Field sInstance;
                         ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Field.java:103: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/FieldObject.java:102: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return (InteractionStrategy<FieldObject, FieldObject>) mIntHandlers.get(typeOfObject);
            ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/MumperHouse.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Mumper mumperOut = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/MumperHouse.java:47: error: [NullAway] assigning @Nullable expression to @NonNull field
                if (!tryAddMovable(mumperOut)) { mumperOut = null; }
                                                           ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/MumperHouse.java:55: error: [NullAway] assigning @Nullable expression to @NonNull field
                mumperOut = null;
                          ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:40: error: [NullAway] initializer method does not guarantee @NonNull field tmpDest (line 38) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public Mumper(int x, int y, Point2D homeSweetHome) {
         ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:63: error: [NullAway] assigning @Nullable expression to @NonNull field
              tmpDest = null;
                      ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:77: error: [NullAway] assigning @Nullable expression to @NonNull field
          tmpDest = null;
                  ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/GameUtils.java:87: error: [NullAway] assigning @Nullable expression to @NonNull field
        public Point2D next_step = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:122: error: [NullAway] assigning @Nullable expression to @NonNull field
            bottle = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:45: error: [NullAway] initializer method does not guarantee @NonNull field mJustReturnedOfficer (line 43) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PoliceStation(int x, int y, int officersCnt) {
           ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:90: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:136: error: [NullAway] assigning @Nullable expression to @NonNull field
            mJustReturnedOfficer = null;
                                 ^
    (see http://t.uber.com/nullaway )
../original/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Policeman.java:43: error: [NullAway] initializer method does not guarantee @NonNull field mBadGuy (line 32) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Policeman(int x, int y, PoliceStation ps) {
           ^
    (see http://t.uber.com/nullaway )
15 errors
